<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    tools:context=".DiceCamera" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/camera_preview"
            android:layout_width="fill_parent"
            android:layout_height="480dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:background="#FFFFFFFF" >

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#00000000" >

                <View
                    android:id="@+id/shutter_view"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/shutter_taking_color"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/filter_title_textview"
                    style="@style/FilterTitleTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/timer_info_textview"
                    style="@style/FilterTitleTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/timer_hud_textview"
                    style="@style/TimerHUDTextView"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:visibility="invisible" />

                <com.sorasoft.dicecam.view.ArcProgressView
                    android:id="@+id/arc_progressview"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:indeterminate="false"
                    android:max="100"
                    android:progress="50"
                    android:visibility="invisible" />

                <ProgressBar
                    android:id="@+id/progress_circle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:visibility="invisible" />
            </FrameLayout>
        </FrameLayout>

        <com.sorasoft.dicecam.view.MainIconArea
            android:id="@+id/toolbar_body"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:background="@color/dicecam_body"
            android:visibility="visible" >

            <ImageButton
                android:id="@+id/capture_button"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_centerInParent="true"
                android:background="@drawable/take_button"
                android:scaleType="center"
                android:src="@null"
                />

            <ImageButton
                android:id="@+id/album_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="2dp"
                android:background="@drawable/button_pressed"
                android:contentDescription="@string/album_btn"
                android:src="@drawable/btn_album" />

            <ImageButton
                android:id="@+id/filter_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="60dp"
                android:background="@drawable/button_pressed"
                android:contentDescription="@string/filter_btn"
                android:src="@drawable/btn_bookmark" />

            <TextView
                android:id="@+id/filter_button_textview"
                style="@style/BodyButtonTextView"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/filter_button"
                android:layout_marginRight="2dp"
                android:layout_marginTop="-12dp"
                android:text="@string/filter_btn"
                android:visibility="invisible" />

            <ImageButton
                android:id="@+id/random_filter_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button_pressed"
                android:contentDescription="@string/random_filter_btn"
                android:src="@drawable/btn_random" />
        </com.sorasoft.dicecam.view.MainIconArea>

        <RelativeLayout
            android:id="@+id/toolbox"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@color/dicecam_head"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="visible" >

            <ImageButton
                android:id="@+id/collage_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:background="@drawable/head_button_selector"
                android:contentDescription="@string/collage_btn"
                android:scaleType="fitCenter"
                android:src="@drawable/btn_layer" />

            <ImageButton
                android:id="@+id/edge_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toLeftOf="@+id/blur_button"
                android:layout_toRightOf="@+id/collage_button"
                android:background="@drawable/head_button_selector"
                android:src="@drawable/btn_frame" />

            <ImageButton
                android:id="@+id/blur_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:background="@drawable/head_button_selector"
                android:contentDescription="@string/blur_btn"
                android:src="@drawable/btn_focus" />

            <ImageButton
                android:id="@+id/vignette_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toLeftOf="@+id/timer_button"
                android:layout_toRightOf="@+id/blur_button"
                android:background="@drawable/head_button_selector"
                android:contentDescription="@string/vignette_btn"
                android:src="@drawable/btn_lomo" />

            <ImageButton
                android:id="@+id/timer_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:background="@drawable/head_button_selector"
                android:contentDescription="@string/timer_btn"
                android:src="@drawable/btn_timer" />
        </RelativeLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="top"
        android:background="@color/dicecam_head" >

        <ImageButton
            android:id="@+id/camera_flip_button"
            android:layout_width="56dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical|right"
            android:background="@drawable/button_pressed"
            android:contentDescription="@string/flip_camera_btn"
            android:src="@drawable/turn_camera" />

        <ImageButton
            android:id="@+id/settings_button"
            android:layout_width="56dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical|left"
            android:background="@drawable/button_pressed"
            android:contentDescription="@string/settings_btn"
            android:src="@drawable/btn_setting"
            android:visibility="visible" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/frame_selection"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:background="@color/dicecam_head"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:paddingTop="6dp"
        android:visibility="invisible" >

        <ImageButton
            android:id="@+id/frame_cat34"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:background="@color/dicecam_head"
            android:scaleType="fitCenter"
            android:src="@drawable/frame34" />

        <ImageButton
            android:id="@+id/frame_cat11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/dicecam_head"
            android:scaleType="fitCenter"
            android:src="@drawable/frame11" />

        <ImageButton
            android:id="@+id/frame_catdiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/dicecam_head"
            android:scaleType="fitCenter"
            android:src="@drawable/frameetc" />
    </LinearLayout>

    <include
        android:id="@+id/frame_selector"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginTop="80dp"
        layout="@layout/frame_selector"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/framing_option"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:layout_gravity="bottom"
        android:background="@color/option_background"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:visibility="invisible" >

        <LinearLayout
            android:id="@+id/fram_width_1"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/OptionLabelTextView"
                android:layout_width="75dp"
                android:layout_height="fill_parent"
                android:textColor="@color/dicecam_option_text"
                android:text="@string/txt_width" />

            <LinearLayout
                android:id="@+id/fram_width_2"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_square"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/frame_width_none"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:text="@string/txt_width_none"
                    android:textColor="@color/dicecam_option_text" />

                <Button
                    android:id="@+id/frame_width_light"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@drawable/square_border"
                    android:text="@string/width_light"
                    android:textColor="@color/dicecam_option_text" />

                <Button
                    android:id="@+id/frame_width_bold"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:text="@string/width_bold"
                    android:textColor="@color/dicecam_option_text" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/frame_color_1"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/OptionLabelTextView"
                android:layout_width="75dp"
                android:layout_height="fill_parent"
                android:textColor="@color/dicecam_option_text"
                android:text="@string/txt_color" />

            <LinearLayout
                android:id="@+id/frame_color_2"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/rounded_corner_square"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/frame_color_black"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:text="@string/color_black"
                    android:textColor="@color/dicecam_option_text" />

                <Button
                    android:id="@+id/frame_color_white"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:text="@string/color_white"
                    android:textColor="@color/dicecam_option_text" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/timer_option"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:layout_gravity="bottom"
        android:background="@color/option_background"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:visibility="invisible" >

        <LinearLayout
            android:id="@+id/timer_option_1"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/OptionLabelTextView"
                android:layout_width="75dp"
                android:layout_height="fill_parent"
                android:textColor="@color/dicecam_option_text"
                android:text="@string/timer_label" />

            <SeekBar
                android:id="@+id/timer_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:progressDrawable="@drawable/red_scrubber_progress"
                android:layout_gravity="center"
                android:thumb="@drawable/red_scrubber_control"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/timer_option_2"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:orientation="horizontal" >

            <TextView
                style="@style/OptionLabelTextView"
                android:layout_width="75dp"
                android:layout_height="fill_parent"
                android:text="@string/interval_label"
                android:textColor="@color/dicecam_option_text" 
                />

            <SeekBar
                android:id="@+id/interval_seek_bar"
              	android:layout_width="match_parent"
        		android:layout_height="32dp"
        		android:layout_gravity="center"
        		android:progressDrawable="@drawable/red_scrubber_progress"
        		android:thumb="@drawable/red_scrubber_control"
        		/>
        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/lens_selector"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        layout="@layout/favorites"
        android:background="@android:color/transparent"
        android:visibility="invisible" />
</FrameLayout>
